@@ -24,6 +24,7 @@
 package com.sun.electric.tool.user.dialogs.options;
 
 import com.sun.electric.tool.io.IOTool;
+import com.sun.electric.tool.Job;
 
 import java.awt.Frame;
 
@@ -59,6 +60,8 @@ public class GDSTab extends PreferencePanel
 		gdsInputExpandsCells.setSelected(IOTool.isGDSInExpandsCells());
 		gdsInputInstantiatesArrays.setSelected(IOTool.isGDSInInstantiatesArrays());
 		gdsInputIgnoresUnknownLayers.setSelected(IOTool.isGDSInIgnoresUnknownLayers());
+        if (Job.getDebug())
+        gdsSimplifyCells.setSelected(IOTool.isGDSInSimplifyCells());
 	}
 
 	/**
@@ -86,6 +89,9 @@ public class GDSTab extends PreferencePanel
 		currentValue = gdsInputIgnoresUnknownLayers.isSelected();
 		if (currentValue != IOTool.isGDSInIgnoresUnknownLayers())
 			IOTool.setGDSInIgnoresUnknownLayers(currentValue);
+        currentValue = gdsSimplifyCells.isSelected();
+        if (currentValue != IOTool.isGDSInSimplifyCells())
+			IOTool.setGDSInSimplifyCells(currentValue);
 	}
 
 	/** This method is called from within the constructor to
@@ -94,8 +100,7 @@ public class GDSTab extends PreferencePanel
 	 * always regenerated by the Form Editor.
 	 */
     // <editor-fold defaultstate="collapsed" desc=" Generated Code ">//GEN-BEGIN:initComponents
-    private void initComponents()
-    {
+    private void initComponents() {
         java.awt.GridBagConstraints gridBagConstraints;
 
         gds = new javax.swing.JPanel();
@@ -105,15 +110,14 @@ public class GDSTab extends PreferencePanel
         gdsInputIgnoresUnknownLayers = new javax.swing.JCheckBox();
         gdsConvertNCCExportsConnectedByParentPins = new javax.swing.JCheckBox();
         gdsInputMergesBoxes = new javax.swing.JCheckBox();
+        gdsSimplifyCells = new javax.swing.JCheckBox();
 
         getContentPane().setLayout(new java.awt.GridBagLayout());
 
         setTitle("IO Options");
         setName("");
-        addWindowListener(new java.awt.event.WindowAdapter()
-        {
-            public void windowClosing(java.awt.event.WindowEvent evt)
-            {
+        addWindowListener(new java.awt.event.WindowAdapter() {
+            public void windowClosing(java.awt.event.WindowEvent evt) {
                 closeDialog(evt);
             }
         });
@@ -157,7 +161,7 @@ public class GDSTab extends PreferencePanel
         gridBagConstraints.gridx = 0;
         gridBagConstraints.gridy = 5;
         gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
-        gridBagConstraints.insets = new java.awt.Insets(2, 2, 2, 2);
+        gridBagConstraints.insets = new java.awt.Insets(2, 4, 2, 4);
         gds.add(gdsConvertNCCExportsConnectedByParentPins, gridBagConstraints);
 
         gdsInputMergesBoxes.setText("Input merges Boxes (slow)");
@@ -167,6 +171,14 @@ public class GDSTab extends PreferencePanel
         gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
         gridBagConstraints.insets = new java.awt.Insets(4, 4, 2, 4);
         gds.add(gdsInputMergesBoxes, gridBagConstraints);
+
+        gdsSimplifyCells.setText("Simplify contact vias");
+        gridBagConstraints = new java.awt.GridBagConstraints();
+        gridBagConstraints.gridx = 0;
+        gridBagConstraints.gridy = 6;
+        gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
+        gridBagConstraints.insets = new java.awt.Insets(2, 4, 2, 4);
+        gds.add(gdsSimplifyCells, gridBagConstraints);
 
         getContentPane().add(gds, new java.awt.GridBagConstraints());
 
@@ -188,5 +200,6 @@ public class GDSTab extends PreferencePanel
     private javax.swing.JCheckBox gdsInputIncludesText;
     private javax.swing.JCheckBox gdsInputInstantiatesArrays;
     private javax.swing.JCheckBox gdsInputMergesBoxes;
+    private javax.swing.JCheckBox gdsSimplifyCells;
     // End of variables declaration//GEN-END:variables
 }
